# doomseeker-unofficial

./: .gitignore  .hgtags  .mailmap  CHANGELOG.md  CMakeLists.txt  COMPILE.Windows.txt  COMPILE.txt  Dockerfile  README-dev.md  README.md  bitbucket-pipelines.yml  make-doc.sh  uncrustify.cfg
src/plugins/: CMakeLists.txt  PluginHeader.cmake  Translation.cmake
src/plugins/chocolate-doom/: CMakeLists.txt  chocolatedoomengineplugin.cpp  chocolatedoomengineplugin.h  chocolatedoomgameexefactory.cpp  chocolatedoomgameexefactory.h  chocolatedoomgamehost.cpp  chocolatedoomgamehost.h  chocolatedoomgameinfo.h  chocolatedoomgamerunner.cpp  chocolatedoomgamerunner.h  chocolatedoommasterclient.cpp  chocolatedoommasterclient.h  chocolatedoomserver.cpp  chocolatedoomserver.h
src/plugins/chocolate-doom/translations/: chocolatedoom_ca_ES.ts  chocolatedoom_es_ES.ts  chocolatedoom_pl_PL.ts
src/plugins/cszdoom/: CMakeLists.txt  enginezandronumconfigbox.cpp  enginezandronumconfigbox.h  zandronumbinaries.cpp  zandronumdmflags.cpp  zandronumdmflags.h  zandronumengineplugin.cpp  zandronumgamehost.cpp  zandronumgamehost.h  zandronumgameinfo.cpp  zandronumgamerunner.cpp  zandronumgamerunner.h  zandronumserver.cpp  zandronumserver.h  zandronumserverdmflagsparser.cpp  zdoom.xpm
src/plugins/cszdoom/createserverdialogpages/: flagspage.ui  flagspagevaluecontroller.cpp
src/plugins/fakeplugin/: pluginengineplugin.cpp  pluginengineplugin.h  plugingamehost.cpp  plugingamehost.h  pluginmasterclient.cpp  pluginmasterclient.h  pluginserver.cpp  pluginserver.h
src/plugins/fakeplugin/responder/: awaitingclient.h  masterresponder.cpp  masterresponder.h  respondercfg.h  serverresponder.cpp  serverresponder.h
src/plugins/odamex/: CMakeLists.txt  odamexengineplugin.cpp  odamexengineplugin.h  odamexgamehost.cpp  odamexgamehost.h  odamexgameinfo.h  odamexgamerunner.cpp  odamexgamerunner.h  odamexmasterclient.cpp  odamexmasterclient.h  odamexserver.cpp  odamexserver.h
src/plugins/odamex/translations/: odamex_ca_ES.ts  odamex_es_ES.ts  odamex_pl_PL.ts
src/plugins/srb2/: CMakeLists.txt  srb2engineplugin.cpp  srb2engineplugin.h  srb2gameclientrunner.cpp  srb2gamehost.cpp  srb2gamehost.h  srb2gameinfo.cpp  srb2gameinfo.h  srb2masterclient.cpp  srb2masterclient.h  srb2server.cpp  srb2server.h
src/plugins/srb2/translations/: srb2_ca_ES.ts  srb2_es_ES.ts  srb2_pl_PL.ts
src/plugins/turok2ex/: CMakeLists.txt  crc.cpp  crc.h  turok2exengineplugin.cpp  turok2exengineplugin.h  turok2exgamehost.cpp  turok2exgamehost.h  turok2exgameinfo.cpp  turok2exgameinfo.h  turok2exgamerunner.cpp  turok2exgamerunner.h  turok2exmasterclient.cpp  turok2exmasterclient.h  turok2exserver.cpp  turok2exserver.h
src/plugins/turok2ex/translations/: turok2ex_ca_ES.ts  turok2ex_es_ES.ts  turok2ex_pl_PL.ts
src/plugins/vavoom/: vavoomengineplugin.cpp  vavoomengineplugin.h  vavoomgameinfo.h  vavoomgamerunner.cpp  vavoomgamerunner.h  vavoommasterclient.cpp  vavoommasterclient.h  vavoomserver.cpp  vavoomserver.h
src/plugins/zandronum/: CMakeLists.txt  enginezandronumconfigbox.cpp  enginezandronumconfigbox.h  huffmanqt.cpp  huffmanudpsocket.cpp  huffmanudpsocket.h  zandronum2dmflags.cpp  zandronum2dmflags.h  zandronum3dmflags.cpp  zandronum3dmflags.h  zandronumbinaries.cpp  zandronumbinaries.h  zandronumbroadcast.cpp  zandronumbroadcast.h  zandronumengineplugin.cpp  zandronumengineplugin.h  zandronumgameexefactory.cpp  zandronumgameexefactory.h  zandronumgamehost.cpp  zandronumgamehost.h  zandronumgameinfo.cpp  zandronumgameinfo.h  zandronumgamerunner.cpp  zandronumgamerunner.h  zandronummasterclient.cpp  zandronummasterclient.h  zandronumrconprotocol.cpp  zandronumrconprotocol.h  zandronumserver.cpp  zandronumserver.h  zandronumserverdmflagsparser.cpp  zandronumserverdmflagsparser.h
src/plugins/zandronum/createserverdialogpages/: flagsid.cpp  flagspage.cpp  flagspage.h  flagspagevaluecontroller.h  flagspagevaluecontroller2.cpp  (+5 more)
src/plugins/zandronumq/: CMakeLists.txt  enginezandronumqconfigbox.cpp  enginezandronumqconfigbox.h  huffmanqt.cpp  huffmanudpsocket.h  zandronumq.xpm  zandronumq1dmflags.cpp  zandronumq1dmflags.h  zandronumq2dmflags.cpp  zandronumq2dmflags.h  zandronumq3dmflags.cpp  zandronumq3dmflags.h  zandronumqbinaries.cpp  zandronumqbinaries.h  zandronumqbroadcast.cpp  zandronumqbroadcast.h  zandronumqengineplugin.cpp  zandronumqengineplugin.h  zandronumqgameexefactory.cpp  zandronumqgameexefactory.h  zandronumqgamehost.cpp  zandronumqgamehost.h  zandronumqgameinfo.cpp  zandronumqgameinfo.h  zandronumqgamerunner.cpp  zandronumqgamerunner.h  zandronumqgamesettings.cpp  zandronumqgamesettings.h  zandronumqmasterclient.cpp  zandronumqmasterclient.h  zandronumqrconprotocol.cpp  zandronumqrconprotocol.h  zandronumqserver.cpp  zandronumqserver.h  zandronumqserverdmflagsparser.cpp  zandronumqserverdmflagsparser.h
src/wadseeker/: CMakeLists.txt  dptr.h  freedoom.cpp  freedoom.h  ioutils.cpp  ioutils.h  modinstall.cpp  modinstall.h  wadseeker.cpp  wadseeker.h  wadseekerConfig.cmake.in  wadseekerexportinfo.h  wadseekermessagetype.h  wadseekerversiondefs.cmake  wadseekerversioninfo.cpp  wadseekerversioninfo.h
src/wadseeker/entities/: checksum.cpp  checksum.h  hash.cpp  hash.h  link.cpp  link.h  modfile.cpp  modfile.h  modset.h  waddownloadinfo.cpp  waddownloadinfo.h
src/wadseeker/lzma/: CMakeLists.txt
src/wadseeker/protocols/: http.cpp  http.h  json.cpp  networkreply.cpp  networkreply.h  networkreplysignalwrapper.cpp  networkreplysignalwrapper.h  networkreplytimeouter.cpp  networkreplytimeouter.h  urlprovider.cpp  urlprovider.h
src/wadseeker/wadretriever/: wadinstaller.cpp  wadinstaller.h  wadretriever.cpp  wadretriever.h
src/wadseeker/wwwseeker/: htmlparser.cpp  htmlparser.h  idgames.cpp  idgames.h  urlparser.cpp  urlparser.h  wwwseeker.cpp  wwwseeker.h
src/wadseeker/zip/: un7zip.cpp  un7zip.h  unarchive.cpp  unarchive.h  untar.cpp  untar.h  unzip.cpp  unzip.h  zipfile.cpp  zipfile.h
tools/updaterevision/: CMakeLists.txt  trustinfo.rc  updaterevision.c
tools/wadseekerapp/: CMakeLists.txt  main.cpp  main.h
(+526 files in other folders)
